-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.2
-
None
-
db7a74d7d (dev), 05bf1bcb5 (6.10), 0ae1be343 (6.9), 07e811e82 (tqtc/lts-6.8), b6a13575e (tqtc/lts-6.5)
Binding component nested in Loader and StackView leads to segfault in a following setup:
pragma ComponentBehavior: Bound import QtQuick import QtQuick.Controls Window { id: root visible: true property Page page StackView { id: stack anchors.fill: parent initialItem: initialComponent } Component { id: initialComponent Loader { sourceComponent: pageComponent } } Component { id: pageComponent Page { id: page contentItem: Item { Button { text: "reload" onClicked: { stack.clear() stack.push(initialComponent) } } } Binding { target: root restoreMode: Binding.RestoreValue property: "page" value: page } } } }
Clicking "reload" several times leads to segfault.
The same code works fine under 5.15.2
| For Gerrit Dashboard: QTBUG-135295 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 632203,2 | QQmlBind: Clear saved reference when target object is destroyed | dev | qt/qtdeclarative | Status: ABANDONED | -1 | 0 |
| 647729,4 | QQmlBind: Store all values as QV4::PersistentValue | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 651673,2 | QQmlBind: Store all values as QV4::PersistentValue | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 651712,3 | QQmlBind: Store all values as QV4::PersistentValue | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 653511,2 | QQmlBind: Store all values as QV4::PersistentValue | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 653527,3 | QQmlBind: Store all values as QV4::PersistentValue | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |