QQmlBind: Store all values as QV4::PersistentValue

We can't store them as QObject because that may result in dangling
pointers. We need the heap wrappers to track deletions.

Pick-to: 6.8 6.5
Fixes: QTBUG-135295
Change-Id: Id53932aec834ad59104bd867c0056fb8da94d827
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit db7a74d7dc3097c4464c22cbfc189bc180b80fd6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 05bf1bcb5067287644e7a41067bd4d779c56f4b9)