src/qmlmeta/types/qqmlbind.cpp
@@ -59,10 +59,8 @@ public:
         silentDestroy(oldKind);
         switch (newKind) {
         case QQmlBindEntryKind::V4Value:
-            new (&v4Value) QV4::PersistentValue(std::move(other.v4Value));
-            break;
         case QQmlBindEntryKind::Variant:
-            new (&variant) QVariant(std::move(other.variant));
+            new (&v4Value) QV4::PersistentValue(std::move(other.v4Value));
             break;
         case QQmlBindEntryKind::Binding:
             new (&binding) QQmlAnyBinding(std::move(other.binding));
@@ -79,10 +77,8 @@ public:
         silentDestroy(oldKind);
         switch (newKind) {
         case QQmlBindEntryKind::V4Value:
-            new (&v4Value) QV4::PersistentValue(other.v4Value);
-            break;
         case QQmlBindEntryKind::Variant:
-            new (&variant) QVariant(other.variant);
+            new (&v4Value) QV4::PersistentValue(other.v4Value);
             break;
         case QQmlBindEntryKind::Binding:
             new (&binding) QQmlAnyBinding(other.binding);
@@ -97,10 +93,8 @@ public:
     {
         switch (kind) {
         case QQmlBindEntryKind::V4Value:
-            v4Value.~PersistentValue();
-            break;
         case QQmlBindEntryKind::Variant:
-            variant.~QVariant();
+            v4Value.~PersistentValue();
             break;
         case QQmlBindEntryKind::Binding:
             binding.~QQmlAnyBinding();
@@ -111,10 +105,11 @@ public:
         return QQmlBindEntryKind::None;
     }
 
-    [[nodiscard]] QQmlBindEntryKind set(QVariant v, QQmlBindEntryKind oldKind)
+    [[nodiscard]] QQmlBindEntryKind set(
+            QV4::ExecutionEngine *engine, const QVariant &v, QQmlBindEntryKind oldKind)
     {
         silentDestroy(oldKind);
-        new (&variant) QVariant(std::move(v));
+        new (&v4Value) QV4::PersistentValue(engine, engine->fromVariant(v));
         return QQmlBindEntryKind::Variant;
     }
 
@@ -125,6 +120,13 @@ public:
         return QQmlBindEntryKind::V4Value;
     }
 
+    [[nodiscard]] QQmlBindEntryKind setVariant(QV4::PersistentValue v, QQmlBindEntryKind oldKind)
+    {
+        silentDestroy(oldKind);
+        new (&v4Value) QV4::PersistentValue(std::move(v));
+        return QQmlBindEntryKind::Variant;
+    }
+
     [[nodiscard]] QQmlBindEntryKind set(QQmlAnyBinding v, QQmlBindEntryKind oldKind)
     {
         silentDestroy(oldKind);
@@ -133,7 +135,6 @@ public:
     }
 
     QV4::PersistentValue v4Value;
-    QVariant variant;
     QQmlAnyBinding binding;
 
 private:
@@ -612,14 +613,22 @@ QVariant QQmlBind::value() const
     if (!d->lastIsTarget)
         return QVariant();
     Q_ASSERT(d->entries.last().currentKind == QQmlBindEntryKind::Variant);
-    return d->entries.last().current.variant;
+    const auto &v4Value = d->entries.last().current.v4Value;
+    QV4::ExecutionEngine *engine = v4Value.engine();
+    return engine->toVariant(*v4Value.valueRef(), QMetaType());
 }
 
 void QQmlBind::setValue(const QVariant &v)
 {
     Q_D(QQmlBind);
     QQmlBindEntry *targetEntry = d->targetEntry();
-    targetEntry->currentKind = targetEntry->current.set(v, targetEntry->currentKind);
+    QQmlEngine *engine = qmlEngine(this);
+    if (!engine) {
+        qWarning() << "QQmlBind must be created in a QML context";
+        return;
+    }
+    targetEntry->currentKind
+            = targetEntry->current.set(engine->handle(), v, targetEntry->currentKind);
     prepareEval();
 }
 
@@ -899,8 +908,8 @@ void QQmlBindPrivate::decodeBinding(
         return;
     }
 
-    const auto setVariant = [&entry](QVariant var) {
-        entry.currentKind = entry.current.set(std::move(var), entry.currentKind);
+    const auto setVariant = [&entry](QV4::PersistentValue value) {
+        entry.currentKind = entry.current.setVariant(value, entry.currentKind);
     };
 
     const auto setBinding = [&entry](QQmlAnyBinding binding) {
@@ -930,16 +939,20 @@ void QQmlBindPrivate::decodeBinding(
         }
         break;
     case QV4::CompiledData::Binding::Type_String:
-        setVariant(compilationUnit->bindingValueAsString(binding));
+        setVariant(QV4::PersistentValue(
+                compilationUnit->engine,
+                compilationUnit->runtimeStrings[binding->stringIndex]->asReturnedValue()));
         break;
     case QV4::CompiledData::Binding::Type_Number:
-        setVariant(compilationUnit->bindingValueAsNumber(binding));
+        setVariant(QV4::PersistentValue(
+                compilationUnit->engine,
+                compilationUnit->constants[binding->value.constantValueIndex].asReturnedValue()));
         break;
     case QV4::CompiledData::Binding::Type_Boolean:
-        setVariant(binding->valueAsBoolean());
+        setVariant(QV4::PersistentValue(compilationUnit->engine, QV4::Encode(binding->value.b)));
         break;
     case QV4::CompiledData::Binding::Type_Null:
-        setVariant(QVariant::fromValue(nullptr));
+        setVariant(QV4::PersistentValue(compilationUnit->engine, QV4::Encode::null()));
         break;
     case QV4::CompiledData::Binding::Type_Object:
     case QV4::CompiledData::Binding::Type_Invalid:
@@ -1071,8 +1084,11 @@ bool QQmlBindPrivate::isCurrent(QQmlBindEntry *entry) const
                 QV4::Value::fromReturnedValue(vmemo->vmeProperty(propPriv->core.coreIndex())),
                 *entry->current.v4Value.valueRef());
     }
-    case QQmlBindEntryKind::Variant:
-        return entry->current.variant == entry->prop.read();
+    case QQmlBindEntryKind::Variant: {
+        const QV4::PersistentValue &v4Value = entry->current.v4Value;
+        return v4Value.engine()->toVariant(*v4Value.valueRef(), entry->prop.propertyMetaType())
+                == entry->prop.read();
+    }
     case QQmlBindEntryKind::Binding:
         return entry->current.binding == QQmlAnyBinding::ofProperty(entry->prop);
     case QQmlBindEntryKind::None:
@@ -1124,7 +1140,9 @@ void QQmlBind::eval()
             case QQmlBindEntryKind::Variant:
                 if (d->restoreValue) {
                     QQmlAnyBinding::takeFrom(entry.prop); // we don't want to have a binding active
-                    entry.prop.write(entry.previous.variant);
+                    const QV4::PersistentValue &v4Value = entry.previous.v4Value;
+                    entry.prop.write(v4Value.engine()->toVariant(
+                            *v4Value.valueRef(), entry.prop.propertyMetaType()));
                     entry.clearPrev();
                 }
                 break;
@@ -1152,7 +1170,8 @@ void QQmlBind::eval()
                                 QV4::PersistentValue(vmemo->engine, retVal), entry.previousKind);
                 } else {
                     // nope, use the meta object to get a QVariant
-                    entry.previousKind = entry.previous.set(entry.prop.read(), entry.previousKind);
+                    entry.previousKind = entry.previous.set(
+                            propPriv->engine->handle(), entry.prop.read(), entry.previousKind);
                 }
             }
         }
@@ -1171,9 +1190,12 @@ void QQmlBind::eval()
         if (!entry.prop.isValid())
             continue;
         switch (entry.currentKind) {
-        case QQmlBindEntryKind::Variant:
-            entry.prop.write(entry.current.variant);
+        case QQmlBindEntryKind::Variant: {
+            const QV4::PersistentValue &v4Value = entry.current.v4Value;
+            entry.prop.write(
+                    v4Value.engine()->toVariant(*v4Value.valueRef(), entry.prop.propertyMetaType()));
             break;
+        }
         case QQmlBindEntryKind::Binding:
             Q_ASSERT(!d->delayed);
             entry.current.binding.installOn(entry.prop);
